--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -2,3 +2,5 @@ fastapi== 0.103.0
 uvicorn[standard]==0.23.2
 python-multipart==0.0.9
 python-dotenv==1.0.0
+pydantic-settings== 2.8.1
+aiofiles==0.8.0
